--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test-storybook": "storybook test",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "*": "prettier --write"
+  },
   "dependencies": {
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.15"
@@ -48,6 +51,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.5.0",
     "playwright": "^1.50.1",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
