--- a/package.json
+++ b/package.json
@@ -15,7 +15,23 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*": "prettier --write"
+    ".js": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    ".ts": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    ".jsx": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    ".tsx": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.json": "prettier --write"
   },
   "dependencies": {
     "react-dom": "^19.0.0",
